# realm-ui

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/record/: commands.rs  file_helper.rs  mod.rs  record.rs
src/components/: Content.vue  message-api.vue
src/modules/: Record.ts
src/utils/: naiveui.ts
